# spider_man_task

./: .gitignore  README.md  docker-compose.yml  install-spiderman.sh
backend/: .dockerignore  Dockerfile  Dockerfile.prod  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py  alerts.py  audit.py  auth.py  dashboard.py  env_vars.py  environments.py  me.py  metrics_route.py  ops.py  projects.py  roles.py  tasks.py  users.py  worker_groups.py  workers.py
backend/app/core/: access.py  audit.py  config.py  crypto.py  database.py  deps.py  dispatcher.py  file_manager.py  git_sync.py  metrics.py  notifier.py  persistent_files.py  pyver_builder.py  rate_limit.py  redis.py  request_id.py  runs.py  scheduler.py  security.py  seed.py  venv_manager.py  worker_registry.py
backend/app/models/: __init__.py  alert.py  audit.py  env_var.py  environment.py  notification.py  project.py  task.py  user.py  worker.py
backend/app/schemas/: __init__.py  alert.py  auth.py  base.py  common.py  env_var.py  environment.py  project.py  task.py  user.py  worker.py  worker_group.py
backend/app/ws/: __init__.py  client.py  worker.py
backend/migrations/: env.py
backend/tests/: conftest.py  test_auth.py  test_auth_rate_limit.py  test_collaborators.py  test_dispatcher.py  test_dispatcher_group_strategy.py  test_log_filter_api.py  test_me.py  test_models.py  test_seed.py  test_user_model.py  test_users_api.py  test_worker_groups.py  test_worker_registry.py
dist-templates/: .env.example  README.md  install.sh  (+3 more)
worker/: Dockerfile  Dockerfile.prod  build_windows.bat  build_windows.py  pyproject.toml
worker/agent/: __init__.py  config.py  connector.py  executor.py  heartbeat.py  main.py
worker/tests/: test_connector.py  test_executor.py
(+66 files in other folders)
