[project]
name = "spiderman-worker"
version = "0.1.0"
description = "SpiderMan lightweight worker agent"
requires-python = ">=3.11"
dependencies = [
    "websockets>=12.0",
    "psutil>=5.9.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
spiderman-worker = "agent.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
